<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.mti.db.geobuddies.activities.RegisterActivity"
    android:background="@color/bgCadetBlue">

    <!--Login progress-->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"/>


    <!--Register form-->
    <LinearLayout
        android:id="@+id/user_register_form"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <!--GeoBuddies logo-->
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/geobuddies_logo_register"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/geobuddies_logo"
            android:src="@drawable/geobuddies_logo"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp" />

        <!-- Stop auto focussing the EditText -->
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@android:color/transparent"
            android:focusable="true"
            android:focusableInTouchMode="true">
        </LinearLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <!--Username-->
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/txt_register_username"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    style="?android:textAppearanceSmall"
                    android:text="@string/prompt_username"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_weight="10"
                    android:layout_gravity="start"
                    android:id="@+id/register_username"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </TableRow>

            <!--First Name-->
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/txt_register_first_name"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    style="?android:textAppearanceSmall"
                    android:text="@string/prompt_first_name"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_weight="10"
                    android:layout_gravity="start"
                    android:id="@+id/register_first_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_first_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </TableRow>

            <!--Last Name-->
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/txt_register_last_name"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    style="?android:textAppearanceSmall"
                    android:text="@string/prompt_last_name"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_weight="10"
                    android:layout_gravity="start"
                    android:id="@+id/register_last_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_last_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true" />

            </TableRow>

            <!--Email-->
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/txt_register_email"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    style="?android:textAppearanceSmall"
                    android:text="@string/prompt_email"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_weight="10"
                    android:layout_gravity="start"
                    android:id="@+id/register_email"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true" />

            </TableRow>


            <!--Password-->
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent" >

                <TextView
                    android:id="@+id/txt_register_password"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    style="?android:textAppearanceSmall"
                    android:text="@string/prompt_password"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_weight="10"
                    android:layout_gravity="start"
                    android:id="@+id/register_password"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </TableRow>

            <!--Confirm Password-->
            <TableRow
                android:layout_height="match_parent"
                android:layout_width="match_parent" >

                <TextView
                    android:id="@+id/txt_register_password_confirm"
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    style="?android:textAppearanceSmall"
                    android:text="@string/prompt_password_confirm"
                    android:gravity="center_vertical"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:paddingRight="5dp"
                    android:paddingLeft="5dp" />

                <EditText
                    android:layout_weight="10"
                    android:layout_gravity="start"
                    android:id="@+id/register_password_confirm"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp"
                    android:hint="@string/prompt_password_confirm"
                    android:imeActionId="@+id/register"
                    android:imeActionLabel="@string/action_register"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />
            </TableRow>
        </TableLayout>

        <!--Register Button-->
        <Button
            android:id="@+id/register_register_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginLeft="40dp"
            android:layout_marginEnd="40dp"
            android:layout_marginRight="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/action_register"
            android:textStyle="bold"/>


        <!--Empty space with a button at the bottom-->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--Back Button-->
            <Button
                android:id="@+id/register_back_button"
                style="?android:textAppearanceSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:text="@string/action_back" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>



